--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,36 @@
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display');
-p,h1,h2,h3,h4,h5,h6{
+body {
+    background-color: antiquewhite;
+    font-family: Playfair Display, Arial;
+    color: rgba(0, 0, 0, 0.712);
+    line-height: 2;
+    text-align: left;
+}
 
+name {
+    font-size: 28px;
+    color: #000;
+}
+
+div p {
+    font-size: 18px;
+    letter-spacing: ;
+}
+
+div p:nth-child(2):first-letter {
+    font-size: 650%;
+    float: left;
+    margin: -72px 10px -70px 0px;
+}
+
+.button {
+    padding: 10px;
+    width: 180px;
+    background-color: transparent;
+    border: 3px solid rgba(255, 217, 0, 0.76);
+    text-transform: uppercase;
+    cursor: pointer;
+    font-family: Playfair Display;
+    color: rgba(0, 0, 0, 0.712);
+    font-size: 25px;
+    letter-spacing: 5px;
+}
