--- a/css/main.css
+++ b/css/main.css
@@ -28,25 +28,24 @@ div p:nth-child(2):first-letter {
 }
 
 div p:nth-child(2) {
-    margin-top: 25px;
+    padding-top: 15px;
 }
 
 div p:nth-child(3) {
-    margin-top: 23px;
+    padding-top: 13px;
 }
 
 div p:nth-child(4) {
-    margin-top: 23px;
+    padding-top: 13px;
 }
 
 div p:nth-child(5) {
-    margin-top: -23px;
     font-style: italic;
     font-size: 23px;
 }
 
 div p:nth-child(6) {
-    margin-top: 40px;
+    padding-top: 15px;
 }
 
 p b {
